fix: color contrast

--- a/apps/frontend/src/app/components/header/header.component.scss
+++ b/apps/frontend/src/app/components/header/header.component.scss
@@ -257,11 +257,11 @@
   }
 
   .active {
-    color: #009cff;
+    color: #007ac7;
   }
 
   &.active span {
-    color: #009cff;
+    color: #007ac7;
   }
 
   a {
